k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-rest
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-rest
  template:
    metadata:
      labels:
        app: petclinic-rest
    spec:
      containers:
        - name: petclinic-rest
          image: kleger.azurecr.io/petclinic-rest:latest
          ports:
            - containerPort: 9966
      imagePullSecrets:
        - name: acr-secret
