k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: petclinic-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
