k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: petclinic-mysql
  clusterIP: None
