k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-rest-service
spec:
  selector:
    app: petclinic-rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9966  # Correspond au port du conteneur
  type: LoadBalancer
